# qualinova-frontend

./: package-lock.json  package.json  tsconfig.json  turbo.json
apps/qualinova-contracts/: package.json
apps/qualinova-contracts/contracts/certification-issuance/: Cargo.toml  README.md
apps/qualinova-contracts/contracts/certification-issuance/src/: access_control.rs  issuance.rs  lib.rs  query.rs  test.rs  transfer.rs  verification.rs
apps/qualinova-contracts/contracts/certification-issuance/test_snapshots/test/: test_add_and_remove_issuer.1.json  test_batch_issue_certificates.1.json  test_initialize_contract.1.json  test_issue_certificate.1.json  test_list_certificates_by_issuer.1.json  test_list_certificates_by_owner.1.json  test_revoke_certificate.1.json  test_transfer_admin.1.json  test_transfer_certificate.1.json  test_unauthorized_issuance.1.json
apps/qualinova-frontend/: package.json  tsconfig.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/certificate/: page.tsx
src/app/components/: AuthForm.tsx  SecondStepForm.tsx
src/app/create-certificate/: page.tsx
src/app/register/: page.tsx
src/app/sign-in/: page.tsx
src/components/atoms/: textarea.tsx
src/components/auth/: RegisterForm.tsx
src/components/mainPageComponents/: HeroSection.tsx  HowItWorks.tsx  KeyFeatures.tsx
src/components/molecules/: form-field.tsx  step-indicator.tsx
src/components/organisms/: certificate-form.tsx  navbar.tsx
src/components/ui/: Checkbox.tsx  (+1 more)
src/constants/: index.ts
src/test/: Checkbox.test.tsx  Input.test.tsx  PasswordInput.test.tsx
(+117 files in other folders)
