[package]
name = "certification-issuance"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.7"
wee_alloc = "0.4.5"
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
